# -

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  REFACTOR_DIAGNOSIS.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 001_initial.py  002_compliance_fixes.py  003_token_quota_persistence.py  (+4 more)
backend/: config.py  exceptions.py  main.py
deploy/: logrotate.conf  nginx.conf  setup.sh  supervisor.conf
docs/: ACCEPTANCE_CHECKLIST.md  API_KEY_ENCRYPTION.md  BE_SMOKE_REPORT.md  DATABASE_MIGRATION.md  ERROR_HANDLING.md  FE_REFERENCE_REPORT.md  FE_RELEASE_REPORT.md  HISTORY_PURGE_GUIDE.md  HISTORY_REGRESSION_MAP.md  HISTORY_REGRESSION_REPORT.md  MONITORING.md  MONITORING_SUMMARY.md  QUOTA_MONITORING.md  REGRESSION_COVERAGE_GAP.md  RELEASE_GATE_REPORT.md  SDET_REPORT.md  SECRET_ROTATION_STEPS.md  TL_PLAN.md
e2e/: package-lock.json  package.json  playwright.config.ts
frontend/: fix.html  forgot-password.html  index.html  light-theme.css  login.html  main.css  register.html  responsive.css  settings.html  test.html
logs/: .gitignore
scripts/: backtest_signals.py  ci.sh  disk_cleanup_stale_dirs.sh  git_cleanup_tracked_garbage.sh  reset_admin_password.py  verify_all.sh
tests/: conftest.py  test_callback_wiring.py  test_executor_core.py  test_json_parser.py  test_pnl.py  test_regime.py  test_signal_schema.py  test_symbol.py  test_websocket.py
(+110 files in other folders)
